--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 body{
-    background-color:#252525;
+    /* background-color:#252525; */
+    background-color: #4c4343; /* jsut trust me on this itll look scuffed at first ok i will */
+    margin: 0;
+    padding: 0;
 }
 
 .header{
@@ -24,6 +27,11 @@ body{
     flex:1;
     flex-direction:column;
     align-items: center;
+
+    margin: 2.5vw;    
+    padding: 2.5vw;
+    background-color:#252525;
+    border-radius: 40px;
 }
 
 .specialflex{
@@ -67,10 +75,18 @@ body{
     background-color:#d23e3e;
     font-family:'Varela Round';
     font-size:2vh;
-    border-style:none;
-    border-radius:30px;
-
+    border-style:solid;
+    border-color:#252525;
 }
+
+.headerchoice:first-child{
+    border-radius:30px 0 0 30px;
+}
+
+.headerchoice:last-child{
+    border-radius:0 30px 30px 0;
+}
+
 
 .headerchoice:hover{
     background-color:#f7346f;
@@ -88,24 +104,42 @@ body{
     font-size:2vh;
     border-style:none;
     border-radius:30px;
+    border-style:solid;
+    border-color:#252525;
 }
 
+.specialbutton:first-child {
+    background-color:#95A1F1;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
 
-.specialbutton2{
-    height:4vh;
-    width:10vw;
+.specialbutton:last-child {
     background-color:#8fbcbb;
-    font-family:'Varela Round';
-    font-size:2vh;
-    border-style:none;
-    border-radius:30px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 .specialbutton:hover{
     background-color:#d23e3e;
 }
 
-.specialbutton2:hover{
-    background-color:#d23e3e;
 
+.topheader { 
+    background-color:#252525;
+    padding-left: 2.5vw;
+    padding-right: 2.5vw;
+}
+
+.splitpanel {
+    flex: 1;
+    min-width: 300px;
+}
+
+.halfheight {
+    height: 40vh;
+}
+
+.fullheight {
+    height: 75vh;
 }
