--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body{
     flex-direction:column;
     align-items: center;
 
-    margin: 2.5vw;    
-    padding: 2.5vw;
+    margin: 1.25vw;    
+    padding: 1.25vw;
     background-color:#252525;
     border-radius: 40px;
 }
@@ -142,4 +142,8 @@ body{
 
 .fullheight {
     height: 75vh;
+}
+
+.content {
+    padding: 1.25vw;
 }
